# controllers/motorcycle.js
@@ -17,7 +17,7 @@ const getSingle = async (req, res, next) => {
   const userId = new ObjectId(req.params.id);
   const result = await mongodb
     .getDb()
-    .db()
+    .db("Inventory")
     .collection("Motorcycles")
     .find({ _id: userId });
   result.toArray().then((lists) => {
@@ -26,9 +26,9 @@ const getSingle = async (req, res, next) => {
   });
 };
 
-const createMotorcycle = async (req, res) => {
+const createJapMotorcycle = async (req, res) => {
   const contact = {
-    Kawasaki: req.body.Kawasaki,
+    Japanese_Bikes: req.body.Japanese_Bikes,
     Color: req.body.Color,
   };
   const response = await mongodb
@@ -45,10 +45,86 @@ const createMotorcycle = async (req, res) => {
   }
 };
 
-const updateMotorcycle = async (req, res) => {
+const createItaMotorcycle = async (req, res) => {
+  const contact = {
+    Italian_Bikes: req.body.Italian_Bikes,
+    Color: req.body.Color,
+  };
+  const response = await mongodb
+    .getDb()
+    .db("Inventory")
+    .collection("Motorcycles")
+    .insertOne(contact);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res
+      .status(500)
+      .json(response.error || "An error occurred creating contact.");
+  }
+};
+
+const createGermMotorcycle = async (req, res) => {
+  const contact = {
+    German_Bikes: req.body.German_Bikes,
+    Color: req.body.Color,
+  };
+  const response = await mongodb
+    .getDb()
+    .db("Inventory")
+    .collection("Motorcycles")
+    .insertOne(contact);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res
+      .status(500)
+      .json(response.error || "An error occurred creating contact.");
+  }
+};
+
+const updateJapMotorcycle = async (req, res) => {
   const userId = new ObjectId(req.params.id);
   const contact = {
-    Kawasaki: req.body.Kawasaki,
+    Japanese_Bikes: req.body.Japanese_Bikes,
+    Color: req.body.Color,
+  };
+  const response = await mongodb
+    .getDb()
+    .db("Inventory")
+    .collection("Motorcycles")
+    .replaceOne({ _id: userId }, contact);
+  console.log(response);
+  if (response.modifiedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || "Error occurred updating contact.");
+  }
+};
+
+const updateItaMotorcycle = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  const contact = {
+    Italian_Bikes: req.body.Italian_Bikes,
+    Color: req.body.Color,
+  };
+  const response = await mongodb
+    .getDb()
+    .db("Inventory")
+    .collection("Motorcycles")
+    .replaceOne({ _id: userId }, contact);
+  console.log(response);
+  if (response.modifiedCount > 0) {
+    res.status(204).send();
+  } else {
+    res.status(500).json(response.error || "Error occurred updating contact.");
+  }
+};
+
+const updateGermMotorcycle = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+  const contact = {
+    German_Bikes: req.body.German_Bikes,
     Color: req.body.Color,
   };
   const response = await mongodb
@@ -84,7 +160,11 @@ const deleteMotorcycle = async (req, res) => {
 module.exports = {
   getAll,
   getSingle,
-  createMotorcycle,
-  updateMotorcycle,
+  createJapMotorcycle,
+  createItaMotorcycle,
+  createGermMotorcycle,
+  updateJapMotorcycle,
+  updateItaMotorcycle,
+  updateGermMotorcycle,
   deleteMotorcycle,
 };
